# conf.py

./: README.md  conf.json  conf.toml  conf.yaml  pyproject.toml  setup.py  test.py  test_json.py  test_toml.py  test_yaml.py
conf_py/: __init__.py  conf.py
config_py/: __init__.py  config.py
convigure/: __init__.py  conf.py  convigure.py
