[project]
name = "conf.py"
version = "0.0.1"
authors = [{ name = "Randy C. Wihandika", email = "rendicahya@gmail.com" }]
description = "Easy configuration for Python with dot notation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rendicahya/conf.py"
